// Copyright 2022 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package app_list;

message FtrlOptimizerProto {
  // Versioning information that can be used to discard or migrate on-disk
  // state if an incompatible change is made to the FTRL optimizer's algorithm.
  optional int32 version = 1;

  // The weight for each expert in the FTRL optimizer.
  repeated double weights = 2;
}
